--- a/FlipTask.html
+++ b/FlipTask.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlipTask - Управление задачами</title>
+    <title>ConexyTask - Управление задачами</title>
     <style>
         * {
             margin: 0;
@@ -619,7 +619,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>✨ FlipTask ✨</h1>
+        <h1>✨ ConexyTask ✨</h1>
         
         <div id="message"></div>
 
@@ -1080,3 +1080,4 @@
     </script>
 </body>
 </html>
+
